<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".purchaseCompleteActivity">

    <TextView
        android:id="@+id/ticketRegisteredTextView"
        android:layout_width="324dp"
        android:layout_height="53dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:text="@string/ticketRegisteredText"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congratulationTextView" />

    <TextView
        android:id="@+id/congratulationTextView"
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="79dp"
        android:text="@string/congratulationTextViewText"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="144dp"
        android:text="@string/returnHomeButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketRegisteredTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>