<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="63dp"
        android:background="#03A9F4"
        android:text="@string/yearTextViewText"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

    <TextView
        android:id="@+id/monthTextView"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="63dp"
        android:background="#03A9F4"
        android:text="@string/monthTextViewText"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <Spinner
        android:id="@+id/year"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="33dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/yearTextView"
        app:layout_constraintTop_toBottomOf="@+id/month" />

    <Spinner
        android:id="@+id/month"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/monthTextView"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Spinner
        android:id="@+id/date"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="78dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/arrivalCountry" />

    <Spinner
        android:id="@+id/arrivalCountry"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintStart_toEndOf="@+id/departureCountry"
        app:layout_constraintTop_toBottomOf="@+id/arrivalTextView" />

    <TextView
        android:id="@+id/arrivalTextView"
        android:layout_width="82dp"
        android:layout_height="46dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="72dp"
        android:background="#00BCD4"
        android:text="@string/arrivalTextViewText"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/departureTextView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Spinner
        android:id="@+id/departureCountry"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="42dp"
        android:background="@android:drawable/btn_dropdown"
        app:layout_constraintEnd_toStartOf="@+id/arrivalCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureTextView" />

    <TextView
        android:id="@+id/departureTextView"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="92dp"
        android:background="#00BCD4"
        android:text="@string/departureTextViewText"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/arrivalTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/bookingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="144dp"
        android:text="@string/bookingButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="63dp"
        android:background="#03A9F4"
        android:text="@string/dateTextViewText"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departureCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>